--- a/app/src/main/web/styles/index.css
+++ b/app/src/main/web/styles/index.css
@@ -1,3 +1,9 @@
+.center-justified {
+  text-align: justify;
+  margin: 0 auto;
+  width: 50em;
+}
+
 canvas {
 	padding-left: 0;
 	padding-right: 0;
@@ -31,7 +37,7 @@ canvas {
 
 body
 {
-	background-image: url("../background.png");
+	background-image: url("../images/background.png");
 }
 
 html {
